--- a/tools/importer/sections-mapping.json
+++ b/tools/importer/sections-mapping.json
@@ -8,7 +8,7 @@
         "blocks": [
           {
             "id": "box-id--1635432265",
-            "x": 53,
+            "x": 68,
             "y": 90,
             "width": 1460,
             "height": 90,
@@ -27,102 +27,40 @@
                 "xpathWithDetails": "id(\"masthead\")/div[@class=\"g-row nav-brand\"]/nav[@class=\"nav-main print-hidden prn\"]"
               }
             ],
-            "color": "rgba(148, 0, 211, 0.3)",
+            "color": "rgba(148, 0, 211, 0.2)",
             "mapping": "header",
             "customBlockName": ""
           }
         ],
         "settings": {}
-      },
-      {
-        "id": "1-2",
-        "blocks": [
-          {
-            "id": "box-id-1388725091",
-            "x": 63,
-            "y": 181,
-            "width": 1440,
-            "height": 55,
-            "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]/div[1]",
-            "layout": {
-              "numCols": 0,
-              "numRows": 0
-            },
-            "color": "rgba(148, 0, 211, 0.4)",
-            "mapping": "defaultContent",
-            "customBlockName": ""
-          }
-        ],
-        "settings": {
-          "section-metadata-style": "dark-grey,hidden"
-        }
-      },
-      {
-        "id": "1-3",
-        "blocks": [
-          {
-            "id": "box-id--639543998",
-            "x": 63,
-            "y": 236,
-            "width": 1440,
-            "height": 55,
-            "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[2]",
-            "layout": {
-              "numCols": 0,
-              "numRows": 0
-            },
-            "color": "rgb(75, 0, 130)",
-            "mapping": "defaultContent",
-            "customBlockName": ""
-          }
-        ],
-        "settings": {
-          "section-metadata-style": "dark-grey,hidden"
-        }
       }
     ]
   },
   {
     "id": "2",
-    "path": "/us/en_us",
+    "path": "/us/en-us",
     "sections": [
       {
         "id": "2-1",
         "blocks": [
           {
             "id": "box-id-1798291698",
-            "x": 63,
+            "x": 78,
             "y": 292,
             "width": 1440,
             "height": 900,
             "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[3]/div[1]/div[18]/article[1]/section[1]",
             "layout": {
-              "numCols": 1,
-              "numRows": 2
+              "numCols": 0,
+              "numRows": 0
             },
-            "childrenXpaths": [
-              {
-                "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[3]/div[1]/div[18]/article[1]/section[1]/div[2]/div[1]",
-                "xpathWithDetails": "id(\"container-e8bd3cacc8\")/div[@class=\"devrawblock\"]/article[@class=\"tmpl-page\"]/section[@class=\"ognm-header-multimedia tmpl-page__section clrs-dark clrs-quinary ognm-header-multimedia--video\"]/div[@class=\"ognm-header-multimedia__container ognm-header-multimedia__container--reveal elmt-container clrs-dark clrs-quinary\"]/div[@class=\"ognm-header-multimedia__contents\"]"
-              },
-              {
-                "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[3]/div[1]/div[18]/article[1]/section[1]/div[3]",
-                "xpathWithDetails": "id(\"container-e8bd3cacc8\")/div[@class=\"devrawblock\"]/article[@class=\"tmpl-page\"]/section[@class=\"ognm-header-multimedia tmpl-page__section clrs-dark clrs-quinary ognm-header-multimedia--video\"]/div[@class=\"elmt-docked-cta clrs-dark clrs-secondary\"]"
-              }
-            ],
-            "color": "rgba(0, 0, 255, 0.3)",
-            "mapping": "hero",
+            "color": "rgba(148, 0, 211, 0.2)",
+            "mapping": "defaultContent",
             "customBlockName": ""
-          }
-        ],
-        "settings": {}
-      },
-      {
-        "id": "2-2",
-        "blocks": [
+          },
           {
             "id": "box-id-320742335",
-            "x": 157,
+            "x": 172,
             "y": 1256,
             "width": 311,
             "height": 234,
@@ -131,13 +69,13 @@
               "numCols": 0,
               "numRows": 0
             },
-            "color": "rgba(0, 0, 255, 0.2)",
+            "color": "rgba(148, 0, 211, 0.1)",
             "mapping": "defaultContent",
             "customBlockName": ""
           },
           {
             "id": "box-id-2135690739",
-            "x": 495,
+            "x": 510,
             "y": 1256,
             "width": 888,
             "height": 270,
@@ -160,21 +98,38 @@
                 "xpathWithDetails": "id(\"container-e8bd3cacc8\")/div[@class=\"devrawblock\"]/article[@class=\"tmpl-page\"]/section[@class=\"ognm-cardlist-explore-product-categories tmpl-page__section clrs-light clrs-secondary ognm-cardlist-explore-product-categories--carousel js-single-carousel is-at-first-slide\"]/div[@class=\"ognm-cardlist-explore-product-categories__container elmt-container\"]/div[@class=\"ognm-cardlist-explore-product-categories__flex\"]/div[@class=\"ognm-cardlist-explore-product-categories__nav-height\"]/div[@class=\"ognm-cardlist-explore-product-categories__wrap js-single-carousel__wrap\"]/div[@class=\"ognm-cardlist-explore-product-categories__products js-single-carousel__scroller\"]/a[@class=\"ognm-cardlist-explore-product-categories__product js-single-carousel__item\"]"
               }
             ],
-            "color": "rgba(0, 0, 255, 0.2)",
-            "mapping": "carousel",
+            "color": "rgba(148, 0, 211, 0.1)",
+            "mapping": "columns",
             "customBlockName": ""
-          }
-        ],
-        "settings": {
-          "section-metadata-style": "columns-1-2"
-        }
-      },
-      {
-        "id": "2-3",
-        "blocks": [
+          },
+          {
+            "id": "box-id-1728646644",
+            "x": 78,
+            "y": 1590,
+            "width": 1440,
+            "height": 108,
+            "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[3]/div[1]/div[18]/article[1]/nav[1]",
+            "layout": {
+              "numCols": 2,
+              "numRows": 1
+            },
+            "childrenXpaths": [
+              {
+                "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[3]/div[1]/div[18]/article[1]/nav[1]/div[1]/div[1]",
+                "xpathWithDetails": "id(\"container-e8bd3cacc8\")/div[@class=\"devrawblock\"]/article[@class=\"tmpl-page\"]/nav[@class=\"ognm-navigation-info clrs-dark clrs-quaternary\"]/div[@class=\"ognm-navigation-info__container elmt-container\"]/div[@class=\"ognm-navigation-info__title\"]"
+              },
+              {
+                "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[3]/div[1]/div[18]/article[1]/nav[1]/div[1]/div[2]",
+                "xpathWithDetails": "id(\"container-e8bd3cacc8\")/div[@class=\"devrawblock\"]/article[@class=\"tmpl-page\"]/nav[@class=\"ognm-navigation-info clrs-dark clrs-quaternary\"]/div[@class=\"ognm-navigation-info__container elmt-container\"]/div[@class=\"ognm-navigation-info__menu-area js-info-nav__scroll\"]"
+              }
+            ],
+            "color": "rgba(148, 0, 211, 0.2)",
+            "mapping": "columns",
+            "customBlockName": ""
+          },
           {
             "id": "box-id-1798291760",
-            "x": 63,
+            "x": 78,
             "y": 1698,
             "width": 1440,
             "height": 1072,
@@ -209,41 +164,8 @@
                 "xpathWithDetails": "id(\"nav-5\")/div[@class=\"ognm-banner-collage__container elmt-container\"]/div[@class=\"ognm-banner-collage__box clrs-dark clrs-primary\"]"
               }
             ],
-            "color": "rgba(0, 0, 255, 0.3)",
+            "color": "rgba(148, 0, 211, 0.2)",
             "mapping": "columns",
-            "customBlockName": ""
-          }
-        ],
-        "settings": {
-          "section-metadata-style": "dark-grey"
-        }
-      },
-      {
-        "id": "2-4",
-        "blocks": [
-          {
-            "id": "box-id-28364009",
-            "x": 159,
-            "y": 6275,
-            "width": 1248,
-            "height": 543,
-            "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[3]/div[1]/div[18]/article[1]/section[9]/div[1]/div[2]",
-            "layout": {
-              "numCols": 2,
-              "numRows": 1
-            },
-            "childrenXpaths": [
-              {
-                "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[3]/div[1]/div[18]/article[1]/section[9]/div[1]/div[2]/div[1]",
-                "xpathWithDetails": "id(\"container-e8bd3cacc8\")/div[@class=\"devrawblock\"]/article[@class=\"tmpl-page\"]/section[@class=\"ognm-cardlist-centered-caption tmpl-page__section clrs-light clrs-primary ognm-cardlist-centered-caption--double\"]/div[@class=\"ognm-cardlist-centered-caption__container elmt-container\"]/div[@class=\"ognm-cardlist-centered-caption__flex\"]/div[@class=\"ognm-cardlist-centered-caption__flex__item\"]"
-              },
-              {
-                "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[3]/div[1]/div[18]/article[1]/section[9]/div[1]/div[2]/div[2]",
-                "xpathWithDetails": "id(\"container-e8bd3cacc8\")/div[@class=\"devrawblock\"]/article[@class=\"tmpl-page\"]/section[@class=\"ognm-cardlist-centered-caption tmpl-page__section clrs-light clrs-primary ognm-cardlist-centered-caption--double\"]/div[@class=\"ognm-cardlist-centered-caption__container elmt-container\"]/div[@class=\"ognm-cardlist-centered-caption__flex\"]/div[@class=\"ognm-cardlist-centered-caption__flex__item\"]"
-              }
-            ],
-            "color": "rgba(0, 0, 255, 0.2)",
-            "mapping": "cards",
             "customBlockName": ""
           }
         ],
@@ -260,10 +182,10 @@
         "blocks": [
           {
             "id": "box-id-2034642018",
-            "x": 271,
-            "y": 7432,
+            "x": 286,
+            "y": 7433,
             "width": 656,
-            "height": 472,
+            "height": 471,
             "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[4]/div[1]/div[1]/div[1]/div[1]/div[1]/footer[1]/div[1]/div[1]/div[2]",
             "layout": {
               "numCols": 3,
@@ -283,37 +205,29 @@
                 "xpathWithDetails": "id(\"footer\")/div[@class=\"layout-row max-width-base\"]/div[@class=\"footer-elements-container column-grid grid-gap--more\"]/div[@class=\"column-grid--item\"]/ul[@class=\"font-size--small list-unstyled column-grid column-grid--2-col column-grid-sm--3-col\"]/li[@class=\"column-grid--item\"]"
               }
             ],
-            "color": "rgba(0, 255, 0, 0.3)",
+            "color": "rgba(148, 0, 211, 0.2)",
             "mapping": "columns",
             "customBlockName": ""
           },
           {
             "id": "box-id-2034641987",
-            "x": 967,
-            "y": 7432,
+            "x": 982,
+            "y": 7433,
             "width": 328,
-            "height": 472,
+            "height": 471,
             "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[4]/div[1]/div[1]/div[1]/div[1]/div[1]/footer[1]/div[1]/div[1]/div[1]",
             "layout": {
               "numCols": 0,
               "numRows": 0
             },
-            "color": "rgba(0, 255, 0, 0.3)",
+            "color": "rgba(148, 0, 211, 0.2)",
             "mapping": "defaultContent",
             "customBlockName": ""
-          }
-        ],
-        "settings": {
-          "section-metadata-style": "columns-2-1"
-        }
-      },
-      {
-        "id": "3-2",
-        "blocks": [
+          },
           {
             "id": "box-id--1545160382",
-            "x": 271,
-            "y": 7944,
+            "x": 286,
+            "y": 7945,
             "width": 1024,
             "height": 22,
             "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[4]/div[1]/div[1]/div[1]/div[1]/div[1]/footer[1]/div[2]",
@@ -321,7 +235,7 @@
               "numCols": 0,
               "numRows": 0
             },
-            "color": "rgba(0, 255, 0, 0.4)",
+            "color": "rgba(148, 0, 211, 0.3)",
             "mapping": "defaultContent",
             "customBlockName": ""
           }
