--- a/tools/importer/sections-mapping.json
+++ b/tools/importer/sections-mapping.json
@@ -8,7 +8,7 @@
         "blocks": [
           {
             "id": "box-id--1635432265",
-            "x": 68,
+            "x": 208,
             "y": 90,
             "width": 1460,
             "height": 90,
@@ -27,7 +27,7 @@
                 "xpathWithDetails": "id(\"masthead\")/div[@class=\"g-row nav-brand\"]/nav[@class=\"nav-main print-hidden prn\"]"
               }
             ],
-            "color": "rgba(148, 0, 211, 0.2)",
+            "color": "rgba(75, 0, 130, 0.2)",
             "mapping": "header",
             "customBlockName": ""
           }
@@ -45,7 +45,7 @@
         "blocks": [
           {
             "id": "box-id-1798291698",
-            "x": 78,
+            "x": 218,
             "y": 292,
             "width": 1440,
             "height": 900,
@@ -54,13 +54,13 @@
               "numCols": 0,
               "numRows": 0
             },
-            "color": "rgba(148, 0, 211, 0.2)",
+            "color": "rgba(75, 0, 130, 0.2)",
             "mapping": "hero",
             "customBlockName": ""
           },
           {
             "id": "box-id-320742335",
-            "x": 172,
+            "x": 312,
             "y": 1256,
             "width": 311,
             "height": 234,
@@ -69,13 +69,13 @@
               "numCols": 0,
               "numRows": 0
             },
-            "color": "rgba(148, 0, 211, 0.1)",
+            "color": "rgba(75, 0, 130, 0.1)",
             "mapping": "defaultContent",
             "customBlockName": ""
           },
           {
             "id": "box-id-2135690739",
-            "x": 510,
+            "x": 650,
             "y": 1256,
             "width": 888,
             "height": 270,
@@ -98,13 +98,13 @@
                 "xpathWithDetails": "id(\"container-e8bd3cacc8\")/div[@class=\"devrawblock\"]/article[@class=\"tmpl-page\"]/section[@class=\"ognm-cardlist-explore-product-categories tmpl-page__section clrs-light clrs-secondary ognm-cardlist-explore-product-categories--carousel js-single-carousel is-at-first-slide\"]/div[@class=\"ognm-cardlist-explore-product-categories__container elmt-container\"]/div[@class=\"ognm-cardlist-explore-product-categories__flex\"]/div[@class=\"ognm-cardlist-explore-product-categories__nav-height\"]/div[@class=\"ognm-cardlist-explore-product-categories__wrap js-single-carousel__wrap\"]/div[@class=\"ognm-cardlist-explore-product-categories__products js-single-carousel__scroller\"]/a[@class=\"ognm-cardlist-explore-product-categories__product js-single-carousel__item\"]"
               }
             ],
-            "color": "rgba(148, 0, 211, 0.1)",
+            "color": "rgba(75, 0, 130, 0.1)",
             "mapping": "carousel",
             "customBlockName": ""
           },
           {
             "id": "box-id-1728646644",
-            "x": 78,
+            "x": 218,
             "y": 1590,
             "width": 1440,
             "height": 108,
@@ -123,13 +123,13 @@
                 "xpathWithDetails": "id(\"container-e8bd3cacc8\")/div[@class=\"devrawblock\"]/article[@class=\"tmpl-page\"]/nav[@class=\"ognm-navigation-info clrs-dark clrs-quaternary\"]/div[@class=\"ognm-navigation-info__container elmt-container\"]/div[@class=\"ognm-navigation-info__menu-area js-info-nav__scroll\"]"
               }
             ],
-            "color": "rgba(148, 0, 211, 0.2)",
+            "color": "rgba(75, 0, 130, 0.2)",
             "mapping": "columns",
             "customBlockName": ""
           },
           {
             "id": "box-id-1798291760",
-            "x": 78,
+            "x": 218,
             "y": 1698,
             "width": 1440,
             "height": 1072,
@@ -164,8 +164,33 @@
                 "xpathWithDetails": "id(\"nav-5\")/div[@class=\"ognm-banner-collage__container elmt-container\"]/div[@class=\"ognm-banner-collage__box clrs-dark clrs-primary\"]"
               }
             ],
-            "color": "rgba(148, 0, 211, 0.2)",
+            "color": "rgba(75, 0, 130, 0.2)",
             "mapping": "columns",
+            "customBlockName": ""
+          },
+          {
+            "id": "box-id-28364009",
+            "x": 314,
+            "y": 6276,
+            "width": 1248,
+            "height": 543,
+            "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[3]/div[1]/div[18]/article[1]/section[9]/div[1]/div[2]",
+            "layout": {
+              "numCols": 2,
+              "numRows": 1
+            },
+            "childrenXpaths": [
+              {
+                "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[3]/div[1]/div[18]/article[1]/section[9]/div[1]/div[2]/div[1]",
+                "xpathWithDetails": "id(\"container-e8bd3cacc8\")/div[@class=\"devrawblock\"]/article[@class=\"tmpl-page\"]/section[@class=\"ognm-cardlist-centered-caption tmpl-page__section clrs-light clrs-primary ognm-cardlist-centered-caption--double\"]/div[@class=\"ognm-cardlist-centered-caption__container elmt-container\"]/div[@class=\"ognm-cardlist-centered-caption__flex\"]/div[@class=\"ognm-cardlist-centered-caption__flex__item\"]"
+              },
+              {
+                "xpath": "/html[1]/body[1]/div[2]/div[1]/main[1]/div[1]/div[1]/div[1]/div[3]/div[1]/div[18]/article[1]/section[9]/div[1]/div[2]/div[2]",
+                "xpathWithDetails": "id(\"container-e8bd3cacc8\")/div[@class=\"devrawblock\"]/article[@class=\"tmpl-page\"]/section[@class=\"ognm-cardlist-centered-caption tmpl-page__section clrs-light clrs-primary ognm-cardlist-centered-caption--double\"]/div[@class=\"ognm-cardlist-centered-caption__container elmt-container\"]/div[@class=\"ognm-cardlist-centered-caption__flex\"]/div[@class=\"ognm-cardlist-centered-caption__flex__item\"]"
+              }
+            ],
+            "color": "rgba(75, 0, 130, 0.1)",
+            "mapping": "cards",
             "customBlockName": ""
           }
         ],
@@ -182,7 +207,7 @@
         "blocks": [
           {
             "id": "box-id-2034642018",
-            "x": 286,
+            "x": 426,
             "y": 7433,
             "width": 656,
             "height": 471,
@@ -205,13 +230,13 @@
                 "xpathWithDetails": "id(\"footer\")/div[@class=\"layout-row max-width-base\"]/div[@class=\"footer-elements-container column-grid grid-gap--more\"]/div[@class=\"column-grid--item\"]/ul[@class=\"font-size--small list-unstyled column-grid column-grid--2-col column-grid-sm--3-col\"]/li[@class=\"column-grid--item\"]"
               }
             ],
-            "color": "rgba(148, 0, 211, 0.2)",
+            "color": "rgba(75, 0, 130, 0.2)",
             "mapping": "columns",
             "customBlockName": ""
           },
           {
             "id": "box-id-2034641987",
-            "x": 982,
+            "x": 1122,
             "y": 7433,
             "width": 328,
             "height": 471,
@@ -220,13 +245,13 @@
               "numCols": 0,
               "numRows": 0
             },
-            "color": "rgba(148, 0, 211, 0.2)",
+            "color": "rgba(75, 0, 130, 0.2)",
             "mapping": "defaultContent",
             "customBlockName": ""
           },
           {
             "id": "box-id--1545160382",
-            "x": 286,
+            "x": 426,
             "y": 7945,
             "width": 1024,
             "height": 22,
@@ -235,7 +260,7 @@
               "numCols": 0,
               "numRows": 0
             },
-            "color": "rgba(148, 0, 211, 0.3)",
+            "color": "rgba(75, 0, 130, 0.3)",
             "mapping": "defaultContent",
             "customBlockName": ""
           }
